test/classes/errors/nilability-init-var/init-var-nonnil-owned-from-nonnil-borrowed.good
init-var-nonnil-owned-from-nonnil-borrowed.chpl:9: error: invalid copy-initialization
init-var-nonnil-owned-from-nonnil-borrowed.chpl:9: error: Cannot initialize 'owned MyClass' from a 'borrowed MyClass'
